feat(DM5): change print queue (endless copies) and remove PLC tab when hybrid printer
re-generate ink error
change print queue (endless copies) and remove PLC tab when hybrid printer
Reactivate the old communication between Siemens PLC and DPU (TCP/IP) and allow to choice between OPCUA and TCP.

Related work items: #2544, #2547

--- a/rx_main_ctrl/rx_main_ctrl.vcxproj
+++ b/rx_main_ctrl/rx_main_ctrl.vcxproj
@@ -53,6 +53,7 @@
     <ClInclude Include="prod_log.h" />
     <ClInclude Include="lh702_ctrl.h" />
     <ClInclude Include="rx_main_ctrl.h" />
+    <ClInclude Include="siemens_ctrl.h" />
     <ClInclude Include="step_dp.h" />
     <ClInclude Include="step_lb.h" />
     <ClInclude Include="args.h" />
@@ -97,6 +98,7 @@
     <ClCompile Include="pe_main.c" />
     <ClCompile Include="prod_log.c" />
     <ClCompile Include="lh702_ctrl.c" />
+    <ClCompile Include="siemens_ctrl.c" />
     <ClCompile Include="step_dp.c" />
     <ClCompile Include="step_lb.c" />
     <ClCompile Include="args.c" />
