--- a/rx_main_ctrl/rx_main_ctrl.vcxproj.filters
+++ b/rx_main_ctrl/rx_main_ctrl.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="opcua.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="siemens_ctrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="boot_svr.c">
@@ -288,6 +291,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="opcua.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="siemens_ctrl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
