--- a/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj
+++ b/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj
@@ -201,6 +201,8 @@
     <ClCompile Include="slide.c" />
     <ClCompile Include="test.c" />
     <ClCompile Include="test_table.c" />
+    <ClCompile Include="tts_ink.c" />
+    <ClCompile Include="tts_lift.c" />
     <ClCompile Include="tx404.c" />
     <ClCompile Include="tx801.c" />
     <ClCompile Include="tx80x_wd.c" />
@@ -233,6 +235,8 @@
     <ClInclude Include="slide.h" />
     <ClInclude Include="test.h" />
     <ClInclude Include="test_table.h" />
+    <ClInclude Include="tts_ink.h" />
+    <ClInclude Include="tts_lift.h" />
     <ClInclude Include="tx404.h" />
     <ClInclude Include="tx801.h" />
     <ClInclude Include="tx80x_wd.h" />
